tests/NormalTests/paczka1/fuzzy1/18336603.err
Error in line 6: dsBMA0Vb S537 13,3
Error in line 14: KrfctP A7T3 273,T
Error in line 11: KrfctP A753 78,6
Error in line 20: ls1 S865 5,8
Error in line 24: ls1 A749 72,3
Error in line 31: dsBMA0Vb A753 30,5
Error in line 35: oa2fK A749 249,81
